--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # macOS system files
 .DS_Store
-.png
 
 # Python compiled files
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
+
+# Specific image files to ignore
+~/*.png
